20000425-04:37 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/vm/arrays.c
     ! Trace line text fixed.

   * source/rtl/setfunc.prg
     ! HB_EXTENSION guards added.

   - source/rtl/xsavescr.prg
   + source/rtl/xsavescr.c
   * source/rtl/Makefile
   * makefile.bc
   * makefile.vc

20000425-03:49 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rtl/gtstd.c
     * Some cosmetical changes, unused code removed.

20000425-03:38 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbpcode.h
   * source/compiler/hbpcode.c
   * source/compiler/harbour.c
   * source/compiler/genc.c
   * source/vm/hvm.c
     * Some pcode names changed
       JUMPSHORT->JUMPNEAR
       JUMPNEAR* -> JUMP*NEAR
       JUMPFAR* -> JUMP*FAR
       (so that the size specifier is a postfix)
     % Some minor formatting and optimization in HVM.C

20000425-03:20 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/compiler/hbusage.c
     ! Some corrections.

   * source/rtl/gtstd.c
     ! Fixed keyboard (and hangup) for Unix compatible systems.

   * utils/hbrun/Makefile
     ! exttools -> external

   * contrib/libmisc/makefile.bc
   * contrib/libmisc/makefile.vc
   * contrib/libgt/makefile.bc
     ! Fixed library names.

20000424-19:40 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
	* fixed recognition of WHILE abbreviation (WHIL)

20000424-19:15 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/hbfix.c
        * new file to handle final pcode fixing - it fixes
          local variable's positions (position on the
          eval stack) when PARAMETER statement is used

    *source/compiler/genc.c
    *source/compiler/harbour.c
    *source/compiler/hbpcode.c
        * added the table with opcode parameters length
        * added hb_compPCodeEval() to evaluate pcodes
        * added assertion code to keep some tables in sync
          with available opcodes
        * fixed bug when PARAMETER statement was used after 
          LOCAL variables declaration